dropdown z-index bug fix

--- a/src/UI/Dropdown/Dropdown.module.scss
+++ b/src/UI/Dropdown/Dropdown.module.scss
@@ -5,11 +5,11 @@
 
 .dropdown {
     position: relative;
-    z-index: 2;
+
     cursor: pointer;
     &__icon {
         position: absolute;
-       
+
         right: 15px;
         top: 25%;
         transition: all linear 0.1s;
@@ -32,8 +32,10 @@
         display: flex;
         align-items: center;
         gap: 5px;
+        z-index: 1;
     }
     &__content {
+        z-index: 2;
         position: absolute;
         top: 110%;
         left: 0;
